# MS_Project-Autotuning_Framework

./: .gitignore  LICENSE  MANIFEST.in  README.md  TEST.md  main.py  pyproject.toml  requirements.txt  run_full_autotuning.py
configs/archive/: default_config.json
data/results/: ground_truth.json
docs/archive/: ACCURACY_IMPROVEMENT_GUIDE.md  ARCHITECTURE.md  CLEANUP_SUMMARY.md  CODEBASE_STRUCTURE.md  CONSOLIDATED_GUIDES.md  EVALUATION_GUIDE.md  FINAL_STATUS.md  IMPROVEMENT_STRATEGIES.md  IMPROVING_PARAMETER_MATCHING.md  INSTALL_FIX.md  METHODOLOGY_FIX.md  MULTI_METRIC_ENHANCEMENT.md  PARAMETER_EXPANSION.md  PARAMETER_MATCHING_IMPROVEMENTS.md  PARAMETER_MATCHING_OPTIMIZATION.md  PATH_FIX.md  README.md  SEARCH_SPACE_ANALYSIS.md  VTUNE_CAPABILITIES.md  VTUNE_CLARIFICATION.md
logs/archive/: hybrid_aggregation_output.txt  iterative_refinement_ensemble_output.txt  iterative_refinement_final_output.txt  iterative_refinement_improved_output.txt  iterative_refinement_output.txt  mean_aggregation_output.txt  requirements.txt  sequential_10rounds_output.txt  sequential_5rounds_run.txt  sequential_tuning_output.txt
macsim_results/compiled_workloads/: w10_nested_loops  w10_nested_loops.cpp  w11_string_processing  w11_string_processing.cpp  w12_recursive  w12_recursive.cpp  w13_hash_table  w13_hash_table.cpp  w14_matrix_decomp  w14_matrix_decomp.cpp  w15_pattern_matching  w15_pattern_matching.cpp  w16_quicksort  w16_quicksort.cpp  w17_linpack  w18_fft_2d  w19_monte_carlo  w19_monte_carlo.cpp  w1_matrix_mult  w20_sparse_matrix  (+34 more)
report/: README.md  plot_parameters.py  run_experiments.py
scripts/: analyze_sequential_results.py  collect_ground_truth.py  list_workloads.py
(+114 files in other folders)
